<resources>
    <string name="app_name">Trashio</string>

    // Splash Page Accessibility
    <string name="splash_logo"> Logo </string>

    // Main Menu Page
    <string name="game_title">Trashio</string>
    <string name="start_button_text">Play</string>
    <string name="settings_button_text">Settings</string>
    <string name="other_button_text">Others</string>
    <string name="help_button_text">Help</string>

    // Help Page
    <string name="help_header_text">Help Page</string>
    <string name="help_page_description_1_text">1. This game is created by: Gui Cheng and Immanuel Ng.</string>
    <string name="help_page_description_2_text">2. Try to jump between platforms and collect as much as possible!</string>
    <string name="help_page_description_3_text">3. The game ends where you fall to the bottom or jump too high up!</string>
    <string name="help_back_text">Back to Menu</string>

    // Settings Page
    <string name="settings_header_text">Settings </string>
    <string name="settings_master_bgm_text">Background (BGM):</string>
    <string name="settings_master_sfx_text">Sound SFX:</string>
    <string name="settings_accelerometer">Enable Accelerometer</string>
    <string name="settings_back_text">Back to Menu</string>

    // Other Page - (Inventory, Shop, Profile, Leaderboard)
    <string name="other_header_text">Miscellaneous</string>
    <string name="other_inventory_text">Inventory</string>
    <string name="other_shop_text">Shop</string>
    <string name="other_profile_text">Profile</string>
    <string name="other_leaderboard_text">Leaderboard</string>
    <string name="other_back_text">Back to Menu</string>

    // Inventory Page
    <string name="inventory_header_text">Inventory</string>
    <string name="inventory_currency_text"> </string>

    <string name="inventory_item_01_header">The Item</string>
    <string name="inventory_item_01_quantity">Quantity: 1</string>
    <string name="inventory_sample_text">Equip</string>
    <string name="inventory_back_text">Back to Others</string>
    <string name="space"> </string>

    // Shop Page
    <string name="shop_header_text">Shop</string>
    <string name="shop_currency_text"> </string>

    <string name="shop_item_01_header">Item Name 1</string>
    <string name="shop_item_01_cost">Cost: 100</string>
    <string name="shop_sample_text">Buy</string>
    <string name="shop_back_text">Back to Others</string>

    // Leaderboard Page
    <string name="leaderboard_header_text">Welcome to Leaderboard!</string>
    <string name="leaderboard_back_text">Back to Others</string>

    // Profile Page
    <string name="profile_header_text">Profile</string>
    <string name="profile_placeholder_text">Name to search</string>
    <string name="profile_search_text">Search</string>
    <string name="profile_leaderboard_content"> </string>
    <string name="profile_back_text">Back to Others</string>

    // Game Over Page
    <string name="game_over_header_text">Game Over</string>
    <string name="game_over_score_text">Score: </string>
    <string name="game_over_coin_text">Coins Gained: </string>
    <string name="game_over_SubmitText">Submit</string>
    <string name="game_over_back_text">Back to Menu</string>

</resources>