<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu">

    <TextView
        android:id="@+id/other_page_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="sans-serif"
        android:text="@string/other_header_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="52sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/o_back_button"
        app:layout_constraintEnd_toEndOf="@+id/other_page_header"
        app:layout_constraintStart_toStartOf="@+id/other_page_header"
        app:layout_constraintTop_toBottomOf="@+id/other_page_header">

        <Button
            android:id="@+id/o_inventory_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#A62335"
            android:fontFamily="sans-serif-black"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/other_inventory_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/o_shop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#998227"
            android:fontFamily="sans-serif-black"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/other_shop_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/o_leaderboard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#602A75"
            android:fontFamily="sans-serif-black"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/other_leaderboard_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/o_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#278328"
            android:fontFamily="sans-serif-black"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/other_profile_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/o_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#216EC7"
        android:fontFamily="sans-serif-black"
        android:text="@string/other_back_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>