<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu"
    android:visibility="visible">

    <TextView
        android:id="@+id/game_over_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/game_over_header_text"
        android:textAlignment="center"
        android:textColor="#F80707"
        android:textSize="72sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="234dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/game_over_header"
        app:layout_constraintStart_toStartOf="@+id/game_over_header"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/game_over_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/game_over_score_text"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/game_over_coin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/game_over_coin_text"
            android:textAlignment="center"
            android:textColor="#D9CB41"
            android:textSize="34sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="223dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/game_over_Input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Enter your Run Name"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/game_over_SubmitRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#41664B"
            android:fontFamily="sans-serif-medium"
            android:text="@string/game_over_SubmitText"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="normal|bold"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/game_over_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#664141"
        android:fontFamily="sans-serif-medium"
        android:text="@string/settings_back_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

</androidx.constraintlayout.widget.ConstraintLayout>