<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu">

    <TextView
        android:id="@+id/shop_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="46dp"
        android:fontFamily="sans-serif"
        android:text="@string/inventory_header_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/inventory_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/inventory_container"
        android:layout_width="381dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/inventory_currency_text"
        app:layout_constraintEnd_toEndOf="@+id/shop_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_header">

        <LinearLayout
            android:id="@+id/inventory_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/inventory_back_text"
                    app:srcCompat="@drawable/collider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/inventory_item_01_header"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="28sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/inventory_item_01_quantity"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="26sp" />

                    <Button
                        android:id="@+id/inventory_back_button2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:backgroundTint="#7A1D16"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/inventory_sample_text"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/inventory_currency_text"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif"
        android:text="@string/inventory_currency_text"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/inventory_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_container"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/inventory_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:backgroundTint="#216EC7"
        android:fontFamily="sans-serif-black"
        android:text="@string/inventory_back_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_currency_text" />

</androidx.constraintlayout.widget.ConstraintLayout>